--- a/red_envelope/Move.toml
+++ b/red_envelope/Move.toml
@@ -9,7 +9,7 @@ RoochFramework = { git = "https://github.com/rooch-network/rooch.git", subdir = 
 BitcoinMove = { git = "https://github.com/rooch-network/rooch.git", subdir = "frameworks/bitcoin-move", rev = "main" }
 
 [addresses]
-red_envelope = "_"
+red_envelope_v3 = "_"
 std = "0x1"
 moveos_std = "0x2"
 rooch_framework = "0x3"
